# everything

./: .gitignore  LICENSE  README.md  biome.json  flake.nix  manage.py  package-lock.json  package.json  pyproject.toml  renovate.json  shell.nix  tailwind.config.js  update_staticfiles.sh
.github/: dependabot.yml
.github/workflows/: biome.yml  checks.yml  codeql.yml  coverage.yml  pull-request.yml  push.yml
chat/: admin.py  apps.py  consumers.py  tests.py  urls.py
chat/migrations/: 0001_initial.py
chat/templates/: chat.html
core/: models.py  routing.py  tests.py
core/migrations/: 0001_initial.py
core/templates/: index.html
everything/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
src/lib/server/: text-generation.ts
src/routes/v1/chat/completions/: +server.ts
staticfiles/css/: styles.css
staticfiles/js/: chat.js
templates/: base.html  index.html  message.html
