[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "everything"
description = ""
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Raroh73", email = "me@raroh73.com" }]
dependencies = [
  "channels==4.1.0",
  "daphne==4.1.2",
  "django==5.0.6",
  "markdown==3.6",
  "nh3==0.2.17",
  "ollama==0.2.1",
]

[tool.hatch.envs.default.scripts]
server = "python manage.py runserver"

[tool.hatch.envs.test.scripts]
test = "python manage.py test"
cov = "coverage run"
html = "coverage html"

[tool.hatch.envs.lint.scripts]
check = "ruff check"

[tool.coverage.run]
branch = true
command_line = "manage.py test"
source = ["."]

[tool.coverage.html]
directory = "coverage"
